--- a/src/main/resources/jnt_currentUserTasks/html/userTasksTableRow.jspf
+++ b/src/main/resources/jnt_currentUserTasks/html/userTasksTableRow.jspf
@@ -1,13 +1,13 @@
 <c:forEach items="${moduleMap.currentList}"  var="task" varStatus="status" begin="${moduleMap.begin}" end="${moduleMap.end}">
     <tr class="${status.count % 2 == 0 ? 'odd' : 'even'}">
-        <td headers="Title">
-            <i class="icon-tasks"></i>&nbsp;
-            <span class="opentask" onclick="switchTaskDisplay('${task.identifier}')">
-                ${fn:escapeXml(task.displayableName)}
-            </span>
+        <td>
+            <i id="iconTaskDisplay_${task.identifier}" class="iconTaskDisplay icon-plus" onclick="switchTaskDisplay('${task.identifier}')"></i>
+                <strong>&nbsp;${fn:escapeXml(task.displayableName)}</strong>
+            </a>
             <c:if test="${not empty task.properties['targetNode'].node}">
                 <c:set value="${jcr:findDisplayableNode(task.properties['targetNode'].node, renderContext)}" var="displayableNode"/>
-                - <span>
+                &nbsp;-&nbsp;
+                <span>
                     <a href="<c:url value='${url.base}${displayableNode.path}.html'/>">
                         ${fn:escapeXml(task.properties["targetNode"].node.displayableName)}
                     </a>
@@ -15,25 +15,25 @@
             </c:if>
             <c:set value="${jcr:findDisplayableNode(task, renderContext)}" var="displayableNode"/>
             <c:if test="${not jcr:isNodeType(displayableNode, 'jnt:user')}">
-                - <span>
+                &nbsp;-&nbsp;
+                <span>
                     <a href="<c:url value='${url.base}${displayableNode.path}.html'/>">
                         ${displayableNode.displayableName}
                     </a>
                 </span>
             </c:if>
-            <div style="display:none;" class="taskdetail" id="taskdetail_${task.identifier}">
-                <p class="task-info-p"><fmt:message key="label.createdBy"/>: ${task.properties['jcr:createdBy'].string}, <fmt:message key="label.createdOn"/> <fmt:formatDate value="${task.properties['jcr:created'].date.time}" dateStyle="long" type="both"/></p>
+            <div class="taskdetail hide" id="taskdetail_${task.identifier}">
+                <p><em><fmt:message key="label.createdBy"/>: ${task.properties['jcr:createdBy'].string},&nbsp;<fmt:message key="label.createdOn"/>&nbsp;<fmt:formatDate value="${task.properties['jcr:created'].date.time}" dateStyle="long" type="both"/></em></p>
                 <c:if test="${not empty task.properties['priority']}">
-                    <p class="task-priority-p"><fmt:message key="jnt_task.priority"/>: <span class="task-priority task-${task.properties['priority'].string}"><jcr:nodePropertyRenderer node="${task}" name="priority" renderer="resourceBundle"/></span></p>
+                    <p><fmt:message key="jnt_task.priority"/>: <span><jcr:nodePropertyRenderer node="${task}" name="priority" renderer="resourceBundle"/></span></p>
                 </c:if>
                 <c:if test="${not empty task.properties['description']}">
-                    <p class="task-text">${task.properties['description'].string}</p>
+                    <p>${task.properties['description'].string}</p>
                 </c:if>
                 <template:tokenizedForm>
                     <form id="tokenForm_${task.identifier}" name="tokenform_${task.identifier}" method="post" action="<c:url value='${url.base}'/>${task.path}">
                     </form>
                 </template:tokenizedForm>
-                <ul class="taskactionslist">
                     <c:set var="assignable" value="true" />
                     <c:if test="${not empty task.properties['candidates'] and task.properties['assigneeUserKey'].string ne user.name}">
                         <c:set var="assignable" value="false" />
@@ -56,128 +56,86 @@
                     </c:if>
                     <c:choose>
                         <c:when test="${task.properties.state.string == 'active' and task.properties['assigneeUserKey'].string ne user.name and assignable eq 'true'}">
-                            <li>
-                                <a class="btn btn-primary" href="javascript:sendNewAssignee('${task.identifier}','${task.path}','${user.name}')" title="assign to me">
-                                    <i class="icon-check icon-white"></i>
-                                    <fmt:message key="label.actions.assigneToMe"/>
-                                </a>
-                            </li>
+                            <a class="btn btn-primary btn-small" href="javascript:sendNewAssignee('${task.identifier}','${task.path}','${user.name}')" title="assign to me">
+                                <i class="icon-check icon-white"></i>
+                                <fmt:message key="label.actions.assigneToMe"/>
+                            </a>
                         </c:when>
                         <c:when test="${task.properties.state.string == 'active' and task.properties['assigneeUserKey'].string eq user.name}">
-                            <li>
-                                <a class="btn btn-danger" href="javascript:sendNewAssignee('${task.identifier}','${task.path}','')" title="Refuse">
-                                    <i class="icon-stop icon-white"></i>
-                                    <fmt:message key="label.actions.refuse"/>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="btn btn-success" href="javascript:sendNewStatus('${task.identifier}','${task.path}','started')" title="start">
-                                    <i class="icon-play icon-white"></i>
-                                    <fmt:message key="label.actions.start"/>
-                                </a>
-                            </li>
+                            <a class="btn btn-danger btn-small" href="javascript:sendNewAssignee('${task.identifier}','${task.path}','')" title="Refuse">
+                                <i class="icon-stop icon-white"></i>
+                                <fmt:message key="label.actions.refuse"/>
+                            </a>
+                            <a class="btn btn-success btn-small" href="javascript:sendNewStatus('${task.identifier}','${task.path}','started')" title="start">
+                                <i class="icon-play icon-white"></i>
+                                <fmt:message key="label.actions.start"/>
+                            </a>
                         </c:when>
                         <c:when test="${task.properties.state.string == 'started' and task.properties['assigneeUserKey'].string eq user.name}">
-                            <li>
-                                <a class="btn btn-danger btn-small" href="javascript:sendNewAssignee('${task.identifier}','${task.path}','')" title="Refuse">
-                                    <i class="icon-stop icon-white"></i>
-                                    <fmt:message key="label.actions.refuse"/>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="btn btn-warning btn-small" href="javascript:sendNewStatus('${task.identifier}','${task.path}','suspended')" title="suspend">
-                                    <i class="icon-pause icon-white"></i>
-                                    <fmt:message key="label.actions.suspend"/>
-                                </a>
-                            </li>
-                            <utility:setBundle basename="${task.properties['taskBundle'].string}" var="taskBundle"  />
+                            <a class="btn btn-danger btn-small" href="javascript:sendNewAssignee('${task.identifier}','${task.path}','')" title="Refuse">
+                                <i class="icon-stop icon-white"></i>
+                                <fmt:message key="label.actions.refuse"/>
+                            </a>
+                            <a class="btn btn-warning btn-small" href="javascript:sendNewStatus('${task.identifier}','${task.path}','suspended')" title="suspend">
+                                <i class="icon-pause icon-white"></i>
+                                <fmt:message key="label.actions.suspend"/>
+                            </a>
+                            <utility:setBundle basename="${task.properties['taskBundle'].string}" var="taskBundle"/>
                             <c:if test="${not empty task.properties['targetNode'].node}">
                                 <c:set var="currentTaskNode" value="${jcr:findDisplayableNode(task.properties['targetNode'].node, renderContext)}" />
-                                <li>
-                                    <a class="btn btn-small" target="_blank" href="<c:url value="${url.basePreview}${currentTaskNode.path}.html"/>">
-                                        <i class="icon-eye-open"></i>
-                                        <fmt:message key="label.preview"/>
-                                    </a>
-                                </li>
+                                <a class="btn btn-small" target="_blank" href="<c:url value="${url.basePreview}${currentTaskNode.path}.html"/>">
+                                    <i class="icon-eye-open"></i>
+                                    <fmt:message key="label.preview"/>
+                                </a>
                             </c:if>
                             <c:if test="${not empty task.properties['possibleOutcomes']}">
                                 <c:forEach items="${task.properties['possibleOutcomes']}" var="outcome" varStatus="status">
                                     <fmt:message bundle="${taskBundle}" var="outcomeLabel" key="${fn:replace(task.properties['taskName'].string,' ','.')}.${fn:replace(outcome.string,' ','.')}"/>
                                     <c:if test="${fn:startsWith(outcomeLabel, '???')}"><fmt:message bundle="${taskBundle}" var="outcomeLabel" key="${fn:replace(task.properties['taskName'].string,' ','.')}.${fn:replace(fn:toLowerCase(outcome.string),' ','.')}"/></c:if>
-                                    <li>
-                                        <a class="btn btn-primary" href="javascript:sendNewStatus('${task.identifier}','${task.path}','finished','${outcome.string}')" title="${outcome.string}">
+                                    <div>
+                                        <a class="btn btn-primary btn-small" href="javascript:sendNewStatus('${task.identifier}','${task.path}','finished','${outcome.string}')" title="${outcome.string}">
                                             <i class="icon-play icon-white"></i>
                                             ${outcomeLabel}
                                         </a>
-                                    </li>
+                                    </div>
                                 </c:forEach>
                             </c:if>
-
-
-
-
                             <c:if test="${empty task.properties['possibleOutcomes']}">
                                 <c:set var="taskId" value="${task.identifier}"/>
-                                <li>
-                                    <div class="taskaction-complete">
-                                        <input class="completeTaskAction" taskPath="<c:url value='${url.base}${currentNode.path}'/>" type="checkbox" id="btnComplete-${taskId}" onchange="sendNewStatus('${taskId}','${task.path}','finished')"/>
-                                        &nbsp;
-                                        <label for="btnComplete-${taskId}">
-                                            <fmt:message key="label.actions.completed"/>
-                                        </label>
-                                    </div>
-                                </li>
+                                <label class="checkbox" for="btnComplete-${taskId}">
+                                    <input class="checkbox completeTaskAction" taskPath="<c:url value='${url.base}${currentNode.path}'/>" type="checkbox" id="btnComplete-${taskId}" onchange="sendNewStatus('${taskId}','${task.path}','finished')"/>&nbsp;<fmt:message key="label.actions.completed"/>
+                                </label>
                             </c:if>
-                            <li>
-                                <jcr:node var="taskData" path="${task.path}/taskData"/>
-                                <c:if test="${not empty taskData}">
-                                    <template:module path="${task.path}/taskData" view="taskData" />
-                                </c:if>
-                            </li>
+                            <jcr:node var="taskData" path="${task.path}/taskData"/>
+                            <c:if test="${not empty taskData}">
+                                <template:module path="${task.path}/taskData" view="taskData" />
+                            </c:if>
                         </c:when>
                         <c:when test="${task.properties.state.string == 'finished'}">
-                            <li>
-                                <div class="taskaction-complete"><input name="Completed" type="checkbox" disabled="disabled" checked="checked" value="Completed" />
-                                    &nbsp;<fmt:message key="label.actions.completed"/>
-                                </div>
-                            </li>
+                                <i class="icon-ok"></i>
+                                &nbsp;<fmt:message key="label.actions.completed"/>
                         </c:when>
-
-
-
-
                         <c:when test="${task.properties.state.string == 'suspended' and task.properties['assigneeUserKey'].string eq user.name}">
-                            <li>
-                                <a class="btn btn-danger" href="javascript:sendNewAssignee('${task.identifier}','${task.path}','')" title="Refuse">
-                                    <i class="icon-stop icon-white"></i>
-                                    <fmt:message key="label.actions.refuse"/>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="btn btn-success" href="javascript:sendNewStatus('${task.identifier}','${task.path}','started')" title="start">
-                                    <i class="icon-play icon-white"></i>
-                                    <fmt:message key="label.actions.start"/>
-                                </a>
-                            </li>
+                            <a class="btn btn-danger btn-small" href="javascript:sendNewAssignee('${task.identifier}','${task.path}','')" title="Refuse">
+                                <i class="icon-stop icon-white"></i>
+                                <fmt:message key="label.actions.refuse"/>
+                            </a>
+                            <a class="btn btn-success btn-small" href="javascript:sendNewStatus('${task.identifier}','${task.path}','started')" title="start">
+                                <i class="icon-play icon-white"></i>
+                                <fmt:message key="label.actions.start"/>
+                            </a>
                         </c:when>
                         <c:when test="${task.properties.state.string == 'canceled'}">
                         </c:when>
                     </c:choose>
-
-
-
                     <c:if test="${not empty task.properties['dueDate']}">
-                        <li>
-                            <a class="taskaction taskaction-iCalendar" href="<c:url value='${url.base}${task.path}.ics'/>" title="iCalendar">
+                        <div>
+                            <a class="btn" href="<c:url value='${url.base}${task.path}.ics'/>" title="iCalendar">
+                                <i class="icon-calendar"></i>
                                 <fmt:message key="label.actions.icalendar"/>
                             </a>
-                        </li>
+                        </div>
                     </c:if>
-
-
-
-
-                </ul>
             </div>
         </td>
         <c:if test="${dispAssignee}">
@@ -216,12 +174,12 @@
         </c:if>
         <c:choose>
             <c:when test="${dispDueDate}">
-                <td headers="DueDate">
+                <td>
                     <fmt:formatDate value="${task.properties['dueDate'].date.time}" dateStyle="medium" timeStyle="short" type="both"/>
                 </td>
             </c:when>
             <c:when test="${dispLastModifiedDate}">
-                <td headers="LastModifiedDate">
+                <td>
                     <fmt:formatDate value="${task.properties['jcr:lastModified'].date.time}" dateStyle="medium" timeStyle="short" type="both"/>
                 </td>
             </c:when>
