--- a/src/main/resources/jnt_currentUserTasks/html/userTasksTableRow.jspf
+++ b/src/main/resources/jnt_currentUserTasks/html/userTasksTableRow.jspf
@@ -31,7 +31,7 @@
                     <p>${task.properties['description'].string}</p>
                 </c:if>
                 <template:tokenizedForm>
-                    <form id="tokenForm_${task.identifier}" name="tokenform_${task.identifier}" method="post" action="<c:url value='${url.basePreview}'/>${task.path}">
+                    <form id="tokenForm_${task.identifier}" name="tokenform_${task.identifier}" method="post" action="<c:url value='${url.baseUserBoardFrameEdit}'/>${task.path}">
                     </form>
                 </template:tokenizedForm>
                     <c:set var="assignable" value="true" />
@@ -83,7 +83,7 @@
                             <utility:setBundle basename="${task.properties['taskBundle'].string}" var="taskBundle"/>
                             <c:if test="${not empty task.properties['targetNode'].node}">
                                 <c:set var="currentTaskNode" value="${jcr:findDisplayableNode(task.properties['targetNode'].node, renderContext)}" />
-                                <a class="btn btn-small" target="_blank" href="<c:url value="${url.basePreview}${currentTaskNode.path}.html"/>">
+                                <a class="btn btn-small" target="_blank" href="<c:url value="${url.baseUserBoardFrameEdit}${currentTaskNode.path}.html"/>">
                                     <i class="icon-eye-open"></i>
                                     <fmt:message key="label.preview"/>
                                 </a>
