--- a/src/main/resources/css/tasks.css
+++ b/src/main/resources/css/tasks.css
@@ -10,6 +10,10 @@ padding:0;
 #tasklist div.listEditToolbar {
 	margin-bottom:0px !important;
 }
+
+i:hover {
+    cursor: pointer
+}
 /******************************************************************************
 *  Add  tasks Form
 ******************************************************************************/
